production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:968225077300:certificate/cac76ea8-29a0-434e-939e-518830bff4ef
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-name: nsse-ingress-prod
    alb.ingress.kubernetes.io/scheme: internet-facing
    external-dns.alpha.kubernetes.io/hostname: devopsnanuvem.com
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /healthchecks
        pathType: Prefix
        backend:
          service:
            name: nsse-health-checker-prod
            port:
              number: 4443
      - path: /identity
        pathType: Prefix
        backend:
          service:
            name: nsse-identity-server-prod
            port:
              number: 4443
      - path: /invoice
        pathType: Prefix
        backend:
          service:
            name: nsse-invoice-generator-prod
            port:
              number: 4443
      - path: /main
        pathType: Prefix
        backend:
          service:
            name: nsse-main-prod
            port:
              number: 4443
      - path: /notificator
        pathType: Prefix
        backend:
          service:
            name: nsse-notificator-prod
            port:
              number: 4443
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: nsse-order-prod
            port:
              number: 4443
